--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "test": "jest --coverage",
     "test coverage": "jest --coverage"
   },
-  "author": "Flexiloans",
+  "author": "Mitchelle Creado",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.15.0",
     "aws-sdk": "^2.608.0",
     "cli-color": "^2.0.0",
     "config": "^3.2.4",
@@ -41,6 +42,7 @@
     "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "path-to-regexp": "^6.1.0",
+    "prisma": "^3.15.0",
     "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
