--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest --coverage",
-    "test coverage": "jest --coverage"
+    "test coverage": "jest --coverage",
+    "postinstall": "prisma generate"
   },
   "author": "Mitchelle Creado",
   "license": "ISC",
